[package]
name = "see_you_then"
version = "0.1.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]

[features]
exclude_entrypoint = []
test-bpf = []

[dependencies]
borsh = "0.9.1"
borsh-derive = "0.9.1"
solana-program = "1.7.12"

[dev-dependencies]
solana-program-test = "1.7.12"
solana-sdk = "1.7.12"
